# webhtv

./: .gitignore  CODE_REVIEW_REPORT.md  DETAIL_PAGE_MODES.md  EPISODE_CACHE_IMPLEMENTATION.md  NIGHT_MODE_ANTI_FLASH_DESIGN.md  README.md  SHORT_DRAMA_SPEED_FIX.md  智能去广-设计文档.md
.github/scripts/: sync-cnb-release.sh
.github/workflows/: android-release.yml  cnb-release-sync.yml
app/: build.gradle  proguard-rules-media.pro  proguard-rules.pro
catvod/: build.gradle
chaquo/: build.gradle
demo/: nostr.html
docs/: AD_STATS_IMPLEMENTATION.md  AI_AD_DETECTION_DESIGN.md  AI_AD_DETECTION_OVERVIEW.md  AI_AD_DETECTION_QUICKREF.md  AI_AD_DETECTION_SUMMARY.md  AI_GROUP_RULE_RECOGNITION_DESIGN.md  ai-ad-detection-checklist.md  ai-ad-detection-design.md  ai-ad-detection-implementation-summary.md  ai-log-diagnosis-design.md  ai-real-title-extraction-design.md  ai-recommendation-history-metadata-design.md  ai-viewing-report-design.md  fix-00mp4-episode-number-extraction.md  fix-player-episode-tmdb-mismatch.md  search-group-and-precise-filter-design.md  tmdb-crawler-parallel-prefetch-design.md  unified-media-identity-cross-site-resume.md  update-history-design.md  应用完整开发文档.md
gradle/: libs.versions.toml
plans/: Exo播放器解码能力差异与缺失依赖分析.md  csp-go-binary-warmup-plan.md  安卓MPV播放器集成实现与踩坑记录.md  网盘选集标题精简规则.md  远程托管UI重构实现方案.md  远程托管使用说明.md  远程操作能力需求评估.md
scripts/: build_media_deps.sh  build_mpv_native.sh  verify_mpv_native_assets.sh
serverless/webhtv-remote-rust/: Cargo.toml  README.md
serverless/webhtv-remote-rust/src/: main.rs
tools/: generate_random_wallpapers.py
(+888 files in other folders)
